# Payload-Software

./: .gitmodules  CMakeLists.txt  README.md  btstack_config.h
GAP_Advertisement/: gap_config.h
GATT_Service/: PAYLOAD.GATT  PAYLOAD.gatt  service_implementation.c  service_implementation.h
src/: constants.hpp  hw_config.cpp  main.cpp  mode.cpp  mode.hpp  pins.cpp  pins.hpp  sd.cpp  sd.hpp
